syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/files";
package messages.files;

message UploadRequest {
	bytes content = 1;
	string mimetype = 2;
	string name = 3;
}

message FileMeta {
	string id = 1;
	string mimetype = 2;
	string name = 3;
	string channel_id = 4;
	int64 size = 5;
}

message GetAllResponse {
	repeated FileMeta files = 1;
}

message RemoveRequest {
	string id = 1;
}
